chore: actually load css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,5 @@
+@import "tailwindcss";
 @import "maplibre-gl/dist/maplibre-gl.css";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --foreground-rgb: 0, 0, 0;
